--- a/server/mailHtml/verification-mail.ejs
+++ b/server/mailHtml/verification-mail.ejs
@@ -1,55 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>이메일 활성화</title>
-    <meta charset="UTF-8" />
+    <title>게임캠프 이메일 활성화</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style type="text/css">
+      body {
+        margin: 0;
+        padding: 0;
+        min-width: 100%;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        line-height: 1.5;
+        background-color: #fafafa;
+        color: #222222;
+      }
+
+      h1 {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 1.25;
+        margin-top: 0;
+        margin-bottom: 15px;
+        text-align: center;
+      }
+      p {
+        margin-top: 0;
+        margin-bottom: 24px;
+      }
+
+      .email-wrapper {
+        max-width: 600px;
+        margin: 0 auto;
+      }
+      .email-header {
+        background-color: #0070f3;
+        padding: 24px;
+        color: #ffffff;
+      }
+      .email-body {
+        padding: 24px;
+        background-color: #ffffff;
+      }
+    </style>
   </head>
-  <body
-    style="
-      margin: 0;
-      padding: 0;
-      min-width: 100%;
-      font-size: 16px;
-      line-height: 1.2;
-      background-color: aliceblue;
-      color: black;
-    "
-  >
-    <div class="email-wrapper" style="max-width: 600px; margin: 0 auto">
-      <div
-        class="email-header"
-        style="background-color: #0060f3; padding: 24px; color: white"
-      >
-        <h1
-          style="
-            font-size: 22px;
-            font-weight: 600;
-            margin-top: 0;
-            margin-bottom: 15px;
-            text-align: center;
-          "
-        >
-          반갑습니다
-        </h1>
+  <body>
+    <div class="email-wrapper">
+      <div class="email-header">
+        <h1>게임캠프에 오신걸 환영합니다.</h1>
       </div>
-      <div class="email-body" style="padding: 24; background-color: white">
-        <p style="margin-top: 0; margin-bottom: 24px">
-          반갑습니다 <%= user.name %>,
-        </p>
-        <p style="margin-top: 0; margin-bottom: 24px">
-          가입해주셔서 감사합니다 계정을 활성화 하기위해 이코드를 사용해 주세요
-          코드:
-        </p>
-        <p style="margin-top: 0; margin-bottom: 24px">
-          <%= verificationCode %>
-        </p>
-        <p style="margin-top: 0; margin-bottom: 24px">
-          이코드는 10분 후에 만료됩니다.
-        </p>
-        <p style="margin-top: 0; margin-bottom: 24px">
-          가입을 원하시지 않으시다면 메일을 무시해주세요.
-        </p>
+      <div class="email-body">
+        <p>반갑습니다 <%= user.name %>,</p>
+        <p>게임캠프에 가입해 주셔서 감사합니다, 당신의 이메일 활성화 코드는:</p>
+        <h2><%= verificationCode %></h2>
+        <p>활성화 코드의 만료시간은 10분입니다.</p>
+        <p>만약 계정 활성화를 원하시지 않으신다면 이 메일은 무시해 주세요.</p>
       </div>
     </div>
   </body>
